# oakx-plugin-cookiecutter

./: README.md  cookiecutter.json  example.json
{{cookiecutter.project_name}}/: README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yml
{{cookiecutter.project_name}}/docs/: conf.py  index.rst
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/: __init__.py  cli.py  {{cookiecutter.implementation_name}}.py
{{cookiecutter.project_name}}/tests/: __init__.py  test_{{cookiecutter.implementation_name}}.py  {{cookiecutter.implementation_name}}_test.py
