[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.0"
description = "{{cookiecutter.project_name}}"
authors = ["{{cookiecutter.author}}"]
license = "BSD 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "^65.0.1"
tox = "^3.25.1"
click = "^8.1.3"
importlib = "^1.0.4"
oaklib = "^0.1"
sphinx = {version = "^5.3.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
sphinx-click = {version = "^4.3.0", extras = ["docs"]}
myst-parser = {version = "^0.18.1", extras = ["docs"]}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.__project_slug}}.cli:main"

[tool.poetry.plugins."oaklib.plugins"]
{{cookiecutter.scheme}} = "{{cookiecutter.__project_slug}}.{{cookiecutter.implementation_name}}:{{cookiecutter.implementation}}"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser",
    ]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
